# aoc_template

./: Cargo.toml  GETTING_STARTED.md  README.md  README2.md  gemini.md
.cargo/: config.toml
.github/workflows/: readme-stars.yml
src/: main.rs  template.txt
src/template/: aoc_cli.rs
src/template/commands/: download.rs
